sandbox/output
GildedRose.java:16: error: not a statement
        item -> !item.name.equals("Aged Brie") && 
        ^
1 error
